@@ -4,7 +4,7 @@
 
   <groupId>com.github.forax</groupId>
   <artifactId>jexpress</artifactId>
-  <version>2.0</version>
+  <version>2.1</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,13 +14,13 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.10.0</version>
+      <version>5.14.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.10.0</version>
+      <version>5.14.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -30,7 +30,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.14.1</version>
         <executions>
           <execution>
             <id>default-compile</id>
@@ -62,9 +62,8 @@
 
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.2</version>
+        <version>3.5.4</version>
         <configuration>
-          <argLine>--enable-preview</argLine>
           <properties>
             <configurationParameters>
                 junit.jupiter.execution.parallel.enabled=false
@@ -76,7 +75,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.2</version>
         <executions>
           <!-- do not generate a jar -->
           <execution>
@@ -89,7 +88,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.11.2</version>
         <configuration>
           <sourcepath>src/main/java/</sourcepath>
         </configuration>
